--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,10 +1,18 @@
 .navbar, .logoDiv{
-    background-color: salmon;
+    background-color: #e4e7ed;
     width: 100vw;
 }
 .btn{
-    color: lightgray;
+    color: dodgerblue;!important
 }
+
+.seek{
+    color: white;!important
+    background-color: #3159b0;!important
+    background-image: none;!important
+    border-color: #3159b0;!important
+}
+
 .logo{
     padding-top: 3px;
     width: 70%;
