--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,5 +1,5 @@
 .caja{
-    background-color: salmon;
+    background-color: #e4e7ed;
     padding: 10px 10% 10px 10%;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
@@ -8,8 +8,8 @@
     position: relative;
     left: 20%;
     top: 50%;
-    border: 1px solid darksalmon;
-    color: white;
+    border: 1px solid blue;
+    color: darkblue;
     font-size: 16px;
     font-weight: 500;
 }
